--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
 	<name>java-utils</name>
 	<url>https://github.com/SkylarScaling/java-utils</url>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>16</maven.compiler.source>
+		<maven.compiler.target>16</maven.compiler.target>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
